@@ -1,6 +1,7 @@
 version 0.7
 	Added -q flag to urlparse (See README/documentation for examples)
 	Updated documentation, Added more examples for new utilities in README
+	Unicode encoding in logplot line-plot using matplotlib backend (would crash with encoding problems in some cases)
 	
 version 0.6
 	Added --header flag to logparse, will prepend output with field names. useful e.g for dumping to CSV file
